fix: use prefers-color-scheme control dark mode

--- a/usr/themes/classic-22/static/scss/style.scss
+++ b/usr/themes/classic-22/static/scss/style.scss
@@ -5,8 +5,11 @@
   --border-radius: .5rem;
 }
 
+::selection
+
 body {
   cursor: auto;
+  text-underline-offset: 0.2rem
 }
 
 // Theme
@@ -16,6 +19,16 @@ body {
   --primary-hover: #{$primary-600};
   --muted-border-color: #{$grey-200};
   --level-odd-color: #{$grey-50};
+}
+
+@media only screen and (prefers-color-scheme: dark) {
+  :root:not([data-theme]) {
+    --background-color: #{$grey-900};
+    --primary: #{$primary-400};
+    --primary-hover: #{$primary-300};
+    --muted-border-color: #{$grey-700};
+    --level-odd-color: #{$grey-800};
+  }
 }
 
 [data-theme="dark"] {
